improve video case
